@@ -2,7 +2,7 @@ AUX qt-assistant-4.6-qdocconf.patch 2490 RMD160 79d9384c227da842241518330dc3018a
 AUX qt-assistant-4.6-tools.patch 1066 RMD160 d98afbd20029d03d25f07e2fede80fb7757418a1 SHA1 9408cfe7eba54d442bce1ada146e62d96cc87c1e SHA256 dee2c3f322059f5b6b7cce7332bad5f961b453822dab4f715e69fe46b319efb5
 AUX qt-assistant-4.6.0_rc1-tools.patch 1060 RMD160 439c72c021fc7e42c11c566b97c72f27995dee33 SHA1 fbbb45220c581c28150e822cb5149f2dc7eab21c SHA256 4ae2e420b90bda3d14364fc6f06c9d10cc65deded464ab6b02b9785a44646c8b
 EBUILD qt-assistant-4.5.9999.ebuild 2106 RMD160 7f8eb85ee14786d3a31e95fe8670a64ccadbfba3 SHA1 273eb2c5f7ba74974ed390d3180cee2deb846ae3 SHA256 f8d2921d95e19d4b58e5f2eb4b75526436b56adb1273f7eb5a5dbeac6ea5f6fb
-EBUILD qt-assistant-4.6.9999.ebuild 2208 RMD160 276d882eefa29bf71fb7491d77cc6558dae47e10 SHA1 85ca9362d0515d84dd6fbe3d71e0f35a03c7fe42 SHA256 723a22c88b340b90a55e1bdaf8e02050a184cebb226b5c79e06d9d3033add634
+EBUILD qt-assistant-4.6.9999.ebuild 2357 RMD160 af7f80c3504560046045e885b01c967848b68ca8 SHA1 7b3dec2bef472e142db313b77ed396237b3a84b5 SHA256 8a0242313828cc116618d0dc8e2c3cad9066157be8050f142e529f39470f8342
 EBUILD qt-assistant-4.9999.ebuild 2208 RMD160 276d882eefa29bf71fb7491d77cc6558dae47e10 SHA1 85ca9362d0515d84dd6fbe3d71e0f35a03c7fe42 SHA256 723a22c88b340b90a55e1bdaf8e02050a184cebb226b5c79e06d9d3033add634
-MISC ChangeLog 5925 RMD160 7facdf7500db4e028f966cd41b7a088d45d80263 SHA1 d0355443410e8abf64a7fff245da18aa3e9a5769 SHA256 a6bca237f9b0a5e20738e3b6688899de2ee67d5c5ea2f52681c2757a973b34ce
+MISC ChangeLog 6036 RMD160 cdeb2735d9d41db0359a7be5b73607475d6972bc SHA1 ca8d31bb1f7122cb47e177ab552b974f56422d46 SHA256 725a8a1987678275c7d5a0e08625772d8a8ededd745b7f140837da6e7e819eee
 MISC metadata.xml 369 RMD160 52b34abcd322c2436157d9045cb892cffdbf00e4 SHA1 91a5ea601ffcd5d32626c6cd23767f39ecc743cb SHA256 f92954ba27e6923458310562b1537216409895a1ba484399f49809824a80e980
